--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -8,8 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-
+  run-automation-test:
     runs-on: ubuntu-latest
     
     steps:
@@ -34,5 +33,22 @@ jobs:
     #execute gradle command for running cucumber test
     - name: Execute Test
       run: ./gradlew cucumber
+
+    #Archive test result
+    - name: Archive Test Result
+      uses: actions/upload-artifact@v4.6.2
+      if: always()
+      with:
+        name: Cucumber Report
+        path: reports
+
+    #deploy to GitHub Pages
+    - name: Deploy report to Github Pages
+      if: always()
+      uses: peaceiris/actions-gh-pages@v4.0.0
+      with:
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_DIR: reports
       
+    
     
