--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -40,15 +40,15 @@ jobs:
       if: always()
       with:
         name: Cucumber Report
-        path: reports
+        path: reports/
 
     #deploy to GitHub Pages
     - name: Deploy report to Github Pages
       if: always()
       uses: peaceiris/actions-gh-pages@v4.0.0
       with:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_DIR: reports
+        token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: reports/
       
     
     
