--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -47,7 +47,7 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v4.0.0
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: reports
       
     
